// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostTitle does not update title with existing content when pasting HTML 1`] = `
"<!-- wp:heading -->
<h2 class="wp-block-heading">Howdy</h2>
<!-- /wp:heading -->

<!-- wp:heading -->
<h2 class="wp-block-heading">This is a heading.</h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>This is a paragraph.</p>
<!-- /wp:paragraph -->"
`;

exports[`PostTitle populates empty title with first block content when pasting HTML 1`] = `
"<!-- wp:heading -->
<h2 class="wp-block-heading">This is a heading.</h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>This is a paragraph.</p>
<!-- /wp:paragraph -->"
`;
